# demand-forecast

./: .dockerignore  .gitignore  01_eda.ipynb  Dockerfile  LICENSE  README.md  new_projects.sh  pyproject.toml  requirements.in  requirements.txt  test_buil_festures.py
configs/: config.yaml  config.yaml.save
data/processed/: test_merged.parquet
notebooks/: 01_eda.ipynb
src/api/: main.py  schemas.py
src/data/: ingestion.py  preprocessing.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py  validation.py
src/utils/: config.py  logger.py  seed.py
